2006-04-20  Peter Dennis Bartok  <pbartok@novell.com>

	* BitmapData.cs: Updated to match the BitmapData structure
	  from libgdiplus r59689.

2006-04-19  Peter Dennis Bartok  <pbartok@novell.com>

	* BitmapData.cs: Updated to match the BitmapData structure
	  from libgdiplus r59661.

2006-04-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ImageAttributes.cs: SetColorKey(color, color) now calls the
	color,color,ColorAdjustType.

2006-02-09  Peter Dennis Bartok  <pbartok@novell.com>

	* ColorPalette.cs, EncoderParameters.cs, EncoderParameter.cs,
	  ImageAttributes.cs: 64bit cleanup and some simplifications

2006-01-27  Sebastien Pouliot  <sebastien@ximian.com>

	* ImageAttributes.cs: Ensure Marshal.FreeHGlobal is called for all 
	unmanaged memory allocated with AllocHGlobal.
	* ImageCodecInfo.cs: Ensure Marshal.FreeHGlobal is called for all 
	unmanaged memory allocated with AllocHGlobal.

2005-11-23 Vladimir Krasnov <vladimirk@mainsoft.com>

	* ImageCodec.jvm.cs: fixed ProcessOneCodec, sometime it was failed
	on parsing version of codec

2005-11-17 Vladimir Krasnov <vladimirk@mainsoft.com>

	* ImageCodec.jvm.cs: fixed WriteImage, removed flush 
	of native output

2005-11-17  Raja R Harinath  <rharinath@novell.com>

	* ColorMatrix.cs: Make it have Sequential layout.

2005-11-16 Konstantin Triger <kostat@mainsoft.com>

        * ImageCodec.jvm.cs: refactoring.

2005-11-14 Vladimir Krasnov <vladimirk@mainsoft.com>

	* ImageCodec.jvm.cs: Fixed error handling in codecs emumeration flow

2005-11-13  Kornél Pál  <kornelpal@hotmail.com>

	* ImageFormat.cs: Fixed ToString to use this.Equals to reflect argument
	  changes to ImageFormat objects. Added Exif and Icon strings to ToString
	  and reordered formats to match declaration.

2005-11-13 Konstantin Triger <kostat@mainsoft.com>

        * ImageCodec.jvm.cs: throw an exception if codec is not found.

2005-10-31  Jordi Mas i Hernandez <jordi@ximian.com>

	* ImageFormat.cs: Fixes ToString method
