@@ -1,12 +1,10 @@
 //
 // System.Drawing.Imaging.PaletteFlags.cs
 //
-// (C) 2002 Ximian, Inc.  http://www.ximian.com
 // Author: Dennis Hayes (dennish@raytek.com)
 //
-
-//
-// Copyright (C) 2004 Novell, Inc (http://www.novell.com)
+// (C) 2002 Ximian, Inc.  http://www.ximian.com
+// Copyright (C) 2004, 2006 Novell, Inc (http://www.novell.com)
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -27,10 +25,14 @@
 // OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 //
-using System;
-namespace System.Drawing.Imaging 
-{
+
+namespace System.Drawing.Imaging {
+
+#if NET_2_0
+	[Flags]
+#else
 	[Serializable]
+#endif
 	public enum PaletteFlags {
 		GrayScale = 2,
 		Halftone = 4,
