@@ -1,3 +1,8 @@
+2006-05-05  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* PaletteFlags.cs: corcompare fixes for 2.0. Add [Flags] and remove
+	[Serializable]
+
 2006-04-20  Peter Dennis Bartok  <pbartok@novell.com>
 
 	* BitmapData.cs: Updated to match the BitmapData structure
